<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="enter">Вход</string>
    <string name="enter_button">Войти</string>
    <string name="oss">Объединенный студенческий совет <br /> НИУ "МЭИ"</string>
    <string name="mail">Почта</string>
    <string name="email_example">example@mpei.ru</string>
    <string name="password_hint">Минимум 8 символов</string>
    <string name="password">Пароль</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="forgotten_password"><u>Забыли пароль?</u></string>
    <string name="no_account">Еще нет аккаунта?</string>
    <string name="register"><u>Зарегистрируйся!</u></string>
    <string name="error_mail">Почтовый адрес введен неверно</string>
    <string name="error_password">Введите не менее 8 символов</string>
    <string name="registration_title">Регистрация</string>
    <string name="name">Имя</string>
    <string name="ivan">Иван</string>
    <string name="surname">Фамилия</string>
    <string name="ivanov">Иванов</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="have_account">Уже зарегистрированы?</string>
    <string name="login"><u>Войти</u></string>
    <string name="profile">Профиль</string>
    <string name="my_points">Мои баллы</string>
    <string name="in_progress">Выполняемые</string>
    <string name="on_check">На проверке</string>
    <string name="finished">Завершенные</string>
    <string name="refused">Отклоненные</string>
    <string name="spend_points">Потратить баллы</string>
    <string name="deadline">Сроки</string>
    <string name="task_description">Описание задания</string>
    <string name="place">&lt;font face=”nunito_semibold“>Место: &lt;/font>%1$s</string>
    <string name="begin_date">&lt;font face=”nunito_semibold“>Начало: &lt;/font>%1$s</string>
    <string name="end_date">&lt;font face=”nunito_semibold“>Конец: &lt;/font>%1$s</string>
    <string name="refuse_date">&lt;font face=”nunito_semibold“>Можно отказаться: &lt;/font>%1$s</string>
    <string name="send_for_check">Отправить на проверку</string>
    <string name="refuse_task">Отказаться от задания</string>
    <string name="task_comment">Мой комментарий</string>
    <string name="password_reset">Восстановление пароля</string>
    <string name="send_request">Отправить запрос</string>
    <string name="cancel">Отменить</string>
    <string name="reset_password_text_blank">На почту %1$s было отправлено письмо с инструкцией по восстановлению вашего пароля</string>
    <string name="ok">Ок</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="sex">Пол</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="group">Группа</string>
    <string name="groupExample">Номер вашей группы МЭИ</string>
    <string name="initials">%1$s%2$s</string>
    <string name="name_blank">%1$s %2$s</string>
    <string name="task_dates">%1$s - %2$s</string>
    <string name="no_comment"><b>Комментарий отсутствует</b></string>
    <string name="no_description"><b>Описание отсутствует</b></string>
    <string name="edit_comment_button">edit comment button</string>
    <string name="empty_tasks_list">У вас нет %1$s задач</string>
</resources>