<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:textSize="12sp"
        android:textColor="@color/dark_blue_text"
        android:fontFamily="@font/nunito"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/selector_eye_toggle"
        app:passwordToggleTint="@color/link"
        android:layout_marginTop="5dp"
        app:errorContentDescription="@string/error_mail"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext"
            android:padding="10dp"
            android:textSize="14sp"
            android:fontFamily="@font/nunito"
            android:textColor="@color/dark_blue_text"
            android:textColorHint="@color/dark_gray_hints"
            android:hint="@string/email_example"
            android:ems="15"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@null"
            android:autofillHints="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingTop="11dp"
        android:paddingBottom="11dp"
        android:text="@string/send_request"
        android:textColor="@color/mpei_white"
        android:textSize="18sp"
        android:fontFamily="@font/nunito_semibold"
        android:textAllCaps="false"
        android:background="@drawable/ripple_blue_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="11dp"
        android:paddingTop="11dp"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/mpei_blue"
        android:fontFamily="@font/nunito_semibold"
        android:background="@drawable/ripple_outline_button"/>

</LinearLayout>